update chessboard pic directory

--- a/cameraCalibration.ipynb
+++ b/cameraCalibration.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Calibration"
+    "### Calibration"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Undistortion"
+    "### Undistortion"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Re-projection Error"
+    "### Re-projection error"
    ]
   },
   {
@@ -156,11 +156,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extrinsic calibration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the object points in 3D space\n",
+    "object_points = np.array([[0, 0, 0], [1, 0, 0], [0, 1, 0], [1, 1, 0]], dtype=np.float32)\n",
+    "\n",
+    "# Define the corresponding image points in 2D space\n",
+    "image_points = np.array([[10, 20], [30, 40], [50, 60], [70, 80]], dtype=np.float32)\n",
+    "\n",
+    "# Load camera matrix and distortion coefficients\n",
+    "calibration_data = np.load('calibration_data.npz')\n",
+    "camera_matrix = calibration_data['camera_matrix']\n",
+    "distortion_coeffs = calibration_data['distortion_coeffs']\n",
+    "\n",
+    "# Find the extrinsic parameters\n",
+    "retval, rvec, tvec = cv2.solvePnP(object_points, image_points, camera_matrix, distortion_coeffs)\n",
+    "\n",
+    "# Print the rotation vector and translation vector\n",
+    "print(\"Rotation Vector:\")\n",
+    "print(rvec)\n",
+    "print(\"\\nTranslation Vector:\")\n",
+    "print(tvec)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "# Define the rotation vector and translation vector\n",
+    "rvec = [...]  # Replace [...] with your actual rotation vector\n",
+    "tvec = [...]  # Replace [...] with your actual translation vector\n",
+    "\n",
+    "# Create a 3D plot\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "# Plot the camera position\n",
+    "ax.scatter(0, 0, 0, c='r', marker='o')  # Assuming the camera is at the origin\n",
+    "\n",
+    "# Plot the object points\n",
+    "object_points = [...]  # Replace [...] with your actual object points\n",
+    "ax.scatter(object_points[:, 0], object_points[:, 1], object_points[:, 2], c='b', marker='o')\n",
+    "\n",
+    "# Plot the camera frame\n",
+    "camera_frame_length = 0.1  # Length of the camera frame axes\n",
+    "camera_frame_endpoints = [\n",
+    "    (0, 0, 0),\n",
+    "    (camera_frame_length, 0, 0),\n",
+    "    (0, camera_frame_length, 0),\n",
+    "    (0, 0, camera_frame_length)\n",
+    "]\n",
+    "for i, j in [(0, 1), (0, 2), (0, 3)]:\n",
+    "    ax.plot([camera_frame_endpoints[i][0], camera_frame_endpoints[j][0]],\n",
+    "            [camera_frame_endpoints[i][1], camera_frame_endpoints[j][1]],\n",
+    "            [camera_frame_endpoints[i][2], camera_frame_endpoints[j][2]], c='r')\n",
+    "\n",
+    "# Apply the rotation and translation to the object points\n",
+    "rotated_object_points = [...]  # Replace [...] with your actual rotated object points\n",
+    "\n",
+    "# Plot the rotated object points\n",
+    "ax.scatter(rotated_object_points[:, 0], rotated_object_points[:, 1], rotated_object_points[:, 2], c='g', marker='o')\n",
+    "\n",
+    "# Set the plot limits and labels\n",
+    "ax.set_xlim([-1, 1])\n",
+    "ax.set_ylim([-1, 1])\n",
+    "ax.set_zlim([-1, 1])\n",
+    "ax.set_xlabel('X')\n",
+    "ax.set_ylabel('Y')\n",
+    "ax.set_zlabel('Z')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "# Create a 3D plot\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "# Plot your data points and customize the plot\n",
+    "\n",
+    "# Save the plot as a PNG image file\n",
+    "plt.savefig('plot.png')\n"
+   ]
   }
  ],
  "metadata": {
