--- a/chessBoard.ipynb
+++ b/chessBoard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,7 @@
    ],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# create the chess board pattern\n",
@@ -31,6 +32,10 @@
     "ax.imshow(chess_board, cmap='gray', interpolation='nearest')\n",
     "ax.axis('off')\n",
     "fig.savefig('chess_board.png', dpi=300)\n",
+    "\n",
+    "# Save the figure in the 'Patterns' folder\n",
+    "fig.savefig('Utils/Patterns/chess_board.png', dpi=300)\n",
+    "\n",
     "plt.show()"
    ]
   },
