--- a/cameraCalibration.ipynb
+++ b/cameraCalibration.ipynb
@@ -133,8 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Store matrix and distortion coefficients\n",
-    "np.savez('calibration_data.npz', camera_matrix=camera_matrix, distortion_coeffs=distortion_coeffs)"
+    "# Store matrix, distortion coefficients, rotation and translation vectors\n",
+    "np.savez('calibration_data.npz', camera_matrix=camera_matrix, distortion_coeffs=distortion_coeffs, rvecs=rvecs, tvecs=tvecs)"
    ]
   },
   {
@@ -158,6 +158,13 @@
     "\n",
     "print(\"Total error: \", mean_error / len(object_points_list))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
