bisschen für die synchro

--- a/cameraCalibration.ipynb
+++ b/cameraCalibration.ipynb
@@ -164,7 +164,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# für die rekonstruktion der 3d Weltkoordinaten (aka die analyse der strukturlichter) sind die rvecs und tvecs notwendig "
+   ]
   }
  ],
  "metadata": {
