--- a/cameraCalibration.ipynb
+++ b/cameraCalibration.ipynb
@@ -16,9 +16,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [2. 0. 0.]\n",
+      " [3. 0. 0.]\n",
+      " [4. 0. 0.]\n",
+      " [5. 0. 0.]\n",
+      " [6. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 1. 0.]\n",
+      " [2. 1. 0.]\n",
+      " [3. 1. 0.]\n",
+      " [4. 1. 0.]\n",
+      " [5. 1. 0.]\n",
+      " [6. 1. 0.]\n",
+      " [0. 2. 0.]\n",
+      " [1. 2. 0.]\n",
+      " [2. 2. 0.]\n",
+      " [3. 2. 0.]\n",
+      " [4. 2. 0.]\n",
+      " [5. 2. 0.]\n",
+      " [6. 2. 0.]\n",
+      " [0. 3. 0.]\n",
+      " [1. 3. 0.]\n",
+      " [2. 3. 0.]\n",
+      " [3. 3. 0.]\n",
+      " [4. 3. 0.]\n",
+      " [5. 3. 0.]\n",
+      " [6. 3. 0.]\n",
+      " [0. 4. 0.]\n",
+      " [1. 4. 0.]\n",
+      " [2. 4. 0.]\n",
+      " [3. 4. 0.]\n",
+      " [4. 4. 0.]\n",
+      " [5. 4. 0.]\n",
+      " [6. 4. 0.]\n",
+      " [0. 5. 0.]\n",
+      " [1. 5. 0.]\n",
+      " [2. 5. 0.]\n",
+      " [3. 5. 0.]\n",
+      " [4. 5. 0.]\n",
+      " [5. 5. 0.]\n",
+      " [6. 5. 0.]]\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.7.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 23\u001b[0m\n\u001b[0;32m     20\u001b[0m image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(image_path)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# Convert the image to grayscale\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m gray \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcvtColor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mCOLOR_BGR2GRAY\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# Find the chessboard corners\u001b[39;00m\n\u001b[0;32m     26\u001b[0m ret, corners \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mfindChessboardCorners(gray, chessboard_size, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
+      "\u001b[1;31merror\u001b[0m: OpenCV(4.7.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\color.cpp:182: error: (-215:Assertion failed) !_src.empty() in function 'cv::cvtColor'\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -29,6 +89,7 @@
     "# Prepare object points, like (0,0,0), (1,0,0), ..., (8,5,0)\n",
     "object_points = np.zeros((chessboard_size[0] * chessboard_size[1], 3), np.float32)\n",
     "object_points[:, :2] = np.mgrid[0:chessboard_size[0], 0:chessboard_size[1]].T.reshape(-1, 2)\n",
+    "#print(object_points)\n",
     "\n",
     "# Arrays to store object points and image points from all the images\n",
     "object_points_list = []  # 3D points in real world space\n",
